# shelf

./: Cargo.toml  README.md  echo
fuzzypicker/: Cargo.toml  README.md
fuzzypicker/src/: lib.rs
server/: README.md  config.ts  data.toml  deno.json  main.ts  schema.ts  sync.ts  types.ts
src/: cmd.rs  config.rs  main.rs
src/fuzzy/: LICENSE  README.md
