[package]
name = "shelf-cli"
version = "0.0.32"
authors = ["maytees"]
edition = "2021"
description = "Your personal CLI bookshelf for storing and recalling useful commands."
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/maytees/shelf"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = { version = "1.0.210", features = ["derive"] }
toml = "=0.8.19"
anyhow = "1.0"
dirs = "5.0"
colored = "2"
copypasta = "0.10.1"
shellexpand = "3.1.0"
