[package]
name = "shelf-cli"
version = "0.1.55"
authors = ["maytees"]
edition = "2021"
description = "Your personal CLI bookshelf for storing and recalling useful commands."
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/maytees/shelf"

[[bin]]
name = "shelf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.22"
anyhow = "1.0.98"
dirs = "6.0.0"
colored = "3.0.0"
copypasta = "0.10.2"
shellexpand = "3.1.1"
crossterm = "0.29.0"
fuzzy-matcher = "0.3.7"
